<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.adacore.lkql_jit</groupId>
    <artifactId>lkql_jit</artifactId>
    <packaging>pom</packaging>
    <version>0.1.0</version>
    <modules>
        <module>language</module>
        <module>options</module>
        <module>cli</module>
        <module>standalone</module>
        <module>benchmarks</module>
        <module>builtins_annotations</module>
    </modules>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

        <!-- Used GraalVM version -->
        <graalvm.version>24.2.1</graalvm.version>

        <!-- LangkitSupport version -->
        <config.langkit_supportVersion>0.1</config.langkit_supportVersion>

        <!-- Libadalang version -->
        <config.libadalangVersion>0.1</config.libadalangVersion>

        <!-- Liblkqllang version -->
        <config.liblkqllangVersion>0.1</config.liblkqllangVersion>

        <!-- Python interpreter -->
        <config.python>python</config.python>

        <!-- Node and NPM executables -->
        <config.node></config.node>
        <config.npm></config.npm>

        <!-- NPM configuration -->
        <config.npmInstallCache>true</config.npmInstallCache>
        <config.npmrc></config.npmrc>

        <!-- List of the components to build with native image -->
        <config.nativeComponents>none</config.nativeComponents>

        <!-- Building mode of the native image -->
        <config.buildMode>dev</config.buildMode>
    </properties>

    <profiles>

        <!-- Native components profiles -->

        <profile>
            <id>native</id>
            <properties>
                <config.nativeComponents>lkql_cli</config.nativeComponents>
            </properties>
        </profile>

        <!-- Build mode profiles -->

        <profile>
            <id>dev</id>
            <properties>
                <config.buildMode>dev</config.buildMode>
            </properties>
        </profile>

        <profile>
            <id>debug</id>
            <properties>
                <config.buildMode>debug</config.buildMode>
            </properties>
        </profile>

        <profile>
            <id>prod</id>
            <properties>
                <config.buildMode>prod</config.buildMode>
            </properties>
        </profile>

    </profiles>

    <!-- Project wide dependencies -->
    <dependencies>
        <dependency>
            <groupId>com.diffplug.spotless</groupId>
            <artifactId>spotless-maven-plugin</artifactId>
            <version>2.40.0</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <!-- Configure the Java compiler -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.11.0</version>
                <configuration>
                    <release>24</release>
                    <showWarnings>true</showWarnings>
                    <compilerArgs>
                        <arg>-Xlint:all,-processing</arg>
                        <arg>-Werror</arg>
                        <arg>-implicit:class</arg>
                    </compilerArgs>
                </configuration>
            </plugin>

            <!-- Configure the spotless Java formatter -->
            <plugin>
                <groupId>com.diffplug.spotless</groupId>
                <artifactId>spotless-maven-plugin</artifactId>
                <version>2.40.0</version>

                <configuration>
                    <java>
                        <includes>
                            <include>language/src/main/java/**/*.java</include>
                            <include>options/src/main/java/**/*.java</include>
                            <include>cli/src/main/java/**/*.java</include>
                            <include>benchmarks/src/test/java/**/*.java</include>
                            <include>builtins_annotations/src/main/java/**/*.java</include>
                        </includes>

                        <licenseHeader>
                            <file>${project.basedir}${file.separator}LICENSE</file>
                        </licenseHeader>

                        <prettier>
                            <npmInstallCache>${config.npmInstallCache}</npmInstallCache>
                            <nodeExecutable>${config.node}</nodeExecutable>
                            <npmExecutable>${config.npm}</npmExecutable>
                            <npmrc>${config.npmrc}</npmrc>
                            <devDependencies>
                                <prettier>3.4.2</prettier>
                                <prettier-plugin-java>2.6.7</prettier-plugin-java>
                            </devDependencies>
                            <config>
                                <printWidth>100</printWidth>
                                <tabWidth>4</tabWidth>
                                <endOfLine>lf</endOfLine>
                                <parser>java</parser>
                                <plugins>prettier-plugin-java</plugins>
                            </config>
                        </prettier>

                        <importOrder>
                            <wildcardsLast>true</wildcardsLast>
                            <semanticSort>true</semanticSort>
                        </importOrder>
                        <formatAnnotations/>
                        <removeUnusedImports/>
                    </java>
                    <lineEndings>UNIX</lineEndings>
                </configuration>
            </plugin>
        </plugins>
    </build>

</project>
